# Process this file with automake to produce Makefile.in

# Copyright (c) 1999-2000 The University of Cincinnati.  
# All rights reserved.

# UC MAKES NO REPRESENTATIONS OR WARRANTIES ABOUT THE SUITABILITY OF THE
# SOFTWARE, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
# IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE,
# OR NON-INFRINGEMENT.  UC SHALL NOT BE LIABLE FOR ANY DAMAGES SUFFERED BY
# LICENSEE AS A RESULT OF USING, RESULT OF USING, MODIFYING OR
# DISTRIBUTING THIS SOFTWARE OR ITS DERIVATIVES.

# By using or copying this Software, Licensee agrees to abide by the
# intellectual property laws, and all other applicable laws of the U.S.,
# and the terms of this license.

# You may modify, distribute, and use the software contained in this
# package under the terms of the "GNU LIBRARY GENERAL PUBLIC LICENSE"
# version 2, June 1991. A copy of this license agreement can be found in
# the file "LGPL", distributed with this archive.

# Authors: Philip A. Wilsey	phil.wilsey@uc.edu

#---------------------------------------------------------------------------
include $(top_srcdir)/Makefile.am.common

noinst_LIBRARIES = libiirVisitorVhdlWriter.a

libiirVisitorVhdlWriter_a_SOURCES = \
	IIR_AbsoluteOperator.cc \
	IIR_AccessSubtypeDefinition.cc \
	IIR_AccessTypeDefinition.cc \
	IIR_ActiveAttribute.cc \
	IIR_AdditionOperator.cc \
	IIR_Aggregate.cc \
	IIR_AliasDeclaration.cc \
	IIR_Allocator.cc \
	IIR_AndOperator.cc \
	IIR_ArchitectureDeclaration.cc \
	IIR_ArraySubtypeDefinition.cc \
	IIR_ArrayTypeDefinition.cc \
	IIR_AscendingAttribute.cc \
	IIR_AssertionStatement.cc \
	IIR_AssociationElementByExpression.cc \
	IIR_AssociationElementOpen.cc \
	IIR_AssociationList.cc \
	IIR_AttributeDeclaration.cc \
	IIR_AttributeSpecification.cc \
	IIR_AttributeSpecificationList.cc \
	IIR_BaseAttribute.cc \
	IIR_BitStringLiteral.cc \
	IIR_BlockConfiguration.cc \
	IIR_BlockStatement.cc \
	IIR_CaseStatement.cc \
	IIR_CaseStatementAlternativeByChoices.cc \
	IIR_CaseStatementAlternativeByExpression.cc \
	IIR_CaseStatementAlternativeByOthers.cc \
	IIR_CaseStatementAlternativeList.cc \
	IIR_CharacterLiteral.cc \
	IIR_Choice.cc \
	IIR_ChoiceList.cc \
	IIR_Comment.cc \
	IIR_CommentList.cc \
	IIR_ComponentConfiguration.cc \
	IIR_ComponentDeclaration.cc \
	IIR_ComponentInstantiationStatement.cc \
	IIR_ConcatenationOperator.cc \
	IIR_ConcurrentAssertionStatement.cc \
	IIR_ConcurrentConditionalSignalAssignment.cc \
	IIR_ConcurrentGenerateForStatement.cc \
	IIR_ConcurrentGenerateIfStatement.cc \
	IIR_ConcurrentProcedureCallStatement.cc \
	IIR_ConcurrentSelectedSignalAssignment.cc \
	IIR_ConcurrentStatementList.cc \
	IIR_ConditionalWaveform.cc \
	IIR_ConditionalWaveformList.cc \
	IIR_ConfigurationDeclaration.cc \
	IIR_ConfigurationItem.cc \
	IIR_ConfigurationItemList.cc \
	IIR_ConfigurationSpecification.cc \
	IIR_ConstantDeclaration.cc \
	IIR_ConstantInterfaceDeclaration.cc \
	IIR_DeclarationList.cc \
	IIR_DelayedAttribute.cc \
	IIR_DesignFile.cc \
	IIR_DesignFileList.cc \
	IIR_DesignUnitList.cc \
	IIR_DesignatorByAll.cc \
	IIR_DesignatorByOthers.cc \
	IIR_DesignatorExplicit.cc \
	IIR_DesignatorList.cc \
	IIR_DisconnectSpecification.cc \
	IIR_DivisionOperator.cc \
	IIR_DrivingAttribute.cc \
	IIR_DrivingValueAttribute.cc \
	IIR_ElementDeclaration.cc \
	IIR_ElementDeclarationList.cc \
	IIR_Elsif.cc \
	IIR_EntityClassEntry.cc \
	IIR_EntityClassEntryList.cc \
	IIR_EntityDeclaration.cc \
	IIR_EntityNameList.cc \
	IIR_EnumerationLiteral.cc \
	IIR_EnumerationLiteralList.cc \
	IIR_EnumerationSubtypeDefinition.cc \
	IIR_EnumerationTypeDefinition.cc \
	IIR_EqualityOperator.cc \
	IIR_EventAttribute.cc \
	IIR_ExitStatement.cc \
	IIR_ExponentiationOperator.cc \
	IIR_FileDeclaration.cc \
	IIR_FileInterfaceDeclaration.cc \
	IIR_FileTypeDefinition.cc \
	IIR_FloatingPointLiteral.cc \
	IIR_FloatingPointLiteral32.cc \
	IIR_FloatingPointLiteral64.cc \
	IIR_FloatingSubtypeDefinition.cc \
	IIR_FloatingTypeDefinition.cc \
	IIR_ForLoopStatement.cc \
	IIR_FunctionCall.cc \
	IIR_FunctionDeclaration.cc \
	IIR_GenericList.cc \
	IIR_GreaterThanOperator.cc \
	IIR_GreaterThanOrEqualOperator.cc \
	IIR_GroupConstituent.cc \
	IIR_GroupDeclaration.cc \
	IIR_GroupTemplateDeclaration.cc \
	IIR_HighAttribute.cc \
	IIR_Identifier.cc \
	IIR_IdentifierList.cc \
	IIR_IdentityOperator.cc \
	IIR_IfStatement.cc \
	IIR_ImageAttribute.cc \
	IIR_IndexedName.cc \
	IIR_InequalityOperator.cc \
	IIR_InstanceNameAttribute.cc \
	IIR_IntegerLiteral.cc \
	IIR_IntegerLiteral32.cc \
	IIR_IntegerLiteral64.cc \
	IIR_IntegerSubtypeDefinition.cc \
	IIR_IntegerTypeDefinition.cc \
	IIR_InterfaceList.cc \
	IIR_Label.cc \
	IIR_LastActiveAttribute.cc \
	IIR_LastEventAttribute.cc \
	IIR_LastValueAttribute.cc \
	IIR_LeftAttribute.cc \
	IIR_LeftOfAttribute.cc \
	IIR_LengthAttribute.cc \
	IIR_LessThanOperator.cc \
	IIR_LessThanOrEqualOperator.cc \
	IIR_LibraryClause.cc \
	IIR_LibraryDeclaration.cc \
	IIR_LibraryUnitList.cc \
	IIR_Literal.cc \
	IIR_LowAttribute.cc \
	IIR_ModulusOperator.cc \
	IIR_MultiplicationOperator.cc \
	IIR_Name.cc \
	IIR_NameList.cc \
	IIR_NandOperator.cc \
	IIR_NegationOperator.cc \
	IIR_NextStatement.cc \
	IIR_NorOperator.cc \
	IIR_NotOperator.cc \
	IIR_NullStatement.cc \
	IIR_OrOperator.cc \
	IIR_OthersInitialization.cc \
	IIR_PackageBodyDeclaration.cc \
	IIR_PackageDeclaration.cc \
	IIR_PathNameAttribute.cc \
	IIR_PhysicalLiteral.cc \
	IIR_PhysicalSubtypeDefinition.cc \
	IIR_PhysicalTypeDefinition.cc \
	IIR_PhysicalUnit.cc \
	IIR_PortList.cc \
	IIR_PosAttribute.cc \
	IIR_PredAttribute.cc \
	IIR_ProcedureCallStatement.cc \
	IIR_ProcedureDeclaration.cc \
	IIR_ProcessStatement.cc \
	IIR_QualifiedExpression.cc \
	IIR_QuietAttribute.cc \
	IIR_ROLOperator.cc \
	IIR_ROROperator.cc \
	IIR_RangeAttribute.cc \
	IIR_RangeTypeDefinition.cc \
	IIR_RecordTypeDefinition.cc \
	IIR_RemainderOperator.cc \
	IIR_ReportStatement.cc \
	IIR_ReturnStatement.cc \
	IIR_ReverseRangeAttribute.cc \
	IIR_RightAttribute.cc \
	IIR_RightOfAttribute.cc \
	IIR_SLAOperator.cc \
	IIR_SLLOperator.cc \
	IIR_SRAOperator.cc \
	IIR_SRLOperator.cc \
	IIR_SelectedName.cc \
	IIR_SelectedNameByAll.cc \
	IIR_SelectedWaveform.cc \
	IIR_SelectedWaveformList.cc \
	IIR_SensitizedProcessStatement.cc \
	IIR_SequentialStatementList.cc \
	IIR_SharedVariableDeclaration.cc \
	IIR_SignalAssignmentStatement.cc \
	IIR_SignalDeclaration.cc \
	IIR_SignalInterfaceDeclaration.cc \
	IIR_Signature.cc \
	IIR_SimpleName.cc \
	IIR_SimpleNameAttribute.cc \
	IIR_SliceName.cc \
	IIR_StableAttribute.cc \
	IIR_StringLiteral.cc \
	IIR_SubprogramDeclaration.cc \
	IIR_SubtractionOperator.cc \
	IIR_SubtypeDeclaration.cc \
	IIR_SuccAttribute.cc \
	IIR_TransactionAttribute.cc \
	IIR_Tuple.cc \
	IIR_TypeConversion.cc \
	IIR_TypeDeclaration.cc \
	IIR_UnitList.cc \
	IIR_UseClause.cc \
	IIR_UserAttribute.cc \
	IIR_ValAttribute.cc \
	IIR_ValueAttribute.cc \
	IIR_VariableAssignmentStatement.cc \
	IIR_VariableDeclaration.cc \
	IIR_VariableInterfaceDeclaration.cc \
	IIR_WaitStatement.cc \
	IIR_WaveformElement.cc \
	IIR_WaveformList.cc \
	IIR_WhileLoopStatement.cc \
	IIR_XnorOperator.cc \
	IIR_XorOperator.cc \
	vhdl_writer.cc \
	vhdl_writer.hh \
	vhdl_writer_arg.hh


MAKEDEP_SRCS=$(libiirVisitorVhdlWriter_a_SOURCES)

depend:
	$(MAKE_DEPEND)
